# LocalRouter

./: Cargo.toml  Dockerfile  package.json
.github/workflows/: build-rpi.yml  docker.yml  release.yml
crates/lr-coding-agents/: Cargo.toml
crates/lr-coding-agents/src/: discovery.rs  manager.rs
docs/: DOCKER.md
plan/: 2026-05-05-DOCKER_SUPPORT.md
scripts/: generate-release-notes.sh
src-tauri/: tauri.conf.json
