[workspace]
members = [
    "src-tauri",
    "crates/lr-types",
    "crates/lr-utils",
    "crates/lr-catalog",
    "crates/lr-config",
    "crates/lr-api-keys",
    "crates/lr-oauth",
    "crates/lr-clients",
    "crates/lr-providers",
    "crates/lr-routellm",
    "crates/lr-monitoring",
    "crates/lr-mcp",
    "crates/lr-skills",
    "crates/lr-router",
    "crates/lr-server",
    "crates/lr-marketplace",
    "crates/lr-guardrails",
    "crates/lr-coding-agents",
    "crates/lr-compression",
    "crates/lr-json-repair",
    "crates/lr-mcp-via-llm",
    "crates/lr-context",
    "crates/lr-secret-scanner",
    "crates/lr-memory",
    "crates/lr-embeddings",
    "crates/lr-monitor",
    "crates/lr-responses-sessions",
]
resolver = "2"

[workspace.package]
version = "0.0.119"
edition = "2021"
authors = ["Matus Faro"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/LocalRouter/LocalRouter"

# Clippy lints silenced workspace-wide. Everything else stays at its default
# level — correctness/suspicious/perf still catch real bugs and are worth
# keeping. The list below is only the lints that produce noise without
# meaningfully catching issues in this codebase.
#
# Crates opt in by adding `[lints] workspace = true` to their Cargo.toml.
[workspace.lints.clippy]
# Arbitrary threshold; callers here are fine with 8+ args (builders, etc.).
# Was being #[allow]'d inline in several places before this was centralized.
too_many_arguments = "allow"
# Separating two ifs often reads better than nesting the condition.
collapsible_if = "allow"
# Pedantic (off by default); listed for clarity in case -W pedantic is ever
# added.
module_name_repetitions = "allow"

[workspace.dependencies]
# Internal crates
lr-types = { path = "crates/lr-types" }
lr-utils = { path = "crates/lr-utils" }
lr-catalog = { path = "crates/lr-catalog" }
lr-config = { path = "crates/lr-config" }
lr-api-keys = { path = "crates/lr-api-keys" }
lr-oauth = { path = "crates/lr-oauth" }
lr-clients = { path = "crates/lr-clients" }
lr-providers = { path = "crates/lr-providers" }
lr-routellm = { path = "crates/lr-routellm" }
lr-monitoring = { path = "crates/lr-monitoring" }
lr-mcp = { path = "crates/lr-mcp" }
lr-skills = { path = "crates/lr-skills" }
lr-router = { path = "crates/lr-router" }
lr-server = { path = "crates/lr-server" }
lr-marketplace = { path = "crates/lr-marketplace" }
lr-guardrails = { path = "crates/lr-guardrails", features = ["tauri-support"] }
lr-coding-agents = { path = "crates/lr-coding-agents" }
lr-compression = { path = "crates/lr-compression" }
lr-json-repair = { path = "crates/lr-json-repair" }
lr-mcp-via-llm = { path = "crates/lr-mcp-via-llm" }
lr-context = { path = "crates/lr-context" }
lr-secret-scanner = { path = "crates/lr-secret-scanner" }
lr-memory = { path = "crates/lr-memory" }
lr-embeddings = { path = "crates/lr-embeddings" }
lr-monitor = { path = "crates/lr-monitor" }
lr-responses-sessions = { path = "crates/lr-responses-sessions" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# Web framework
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = { version = "0.8", features = ["preserve_order"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Crypto & security
ring = "0.17"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
hex = "0.4"
machine-uid = "0.5"
sha2 = "0.10"
rand = "0.8"
subtle = "2.6"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# Regex
regex = "1"

# Testing
serial_test = "3.2"

# Time & dates
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"
async-stream = "0.3"

# Configuration
config = "0.14"
dirs = "5.0"

# Keyring for secure storage
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }

# OAuth
oauth2 = "4.4"
urlencoding = "2.1"

# Tauri
tauri = { version = "2.2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2.2"

# File watching
notify = "6.1"

# Ollama SDK
ollama-rs = "0.2"

# Network interfaces
if-addrs = "0.13"

# Clipboard
arboard = "3.4"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Concurrency
futures = "0.3"
futures-util = "0.3"
parking_lot = "0.12"
dashmap = "6.1"

# WebSocket
tokio-tungstenite = "0.21"

# Database
rusqlite = { version = "0.32", features = ["bundled-full"] }

# Lazy initialization
once_cell = "1.20"

# Image processing
image = { version = "0.25", default-features = false, features = ["png"] }

# Shell command parsing
shell-words = "1.1"

# Binary path lookup
which = "7"

# ZIP extraction
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.2", features = ["axum"] }

# JSON Schema validation
jsonschema = "0.18"

# Unicode normalization
unicode-normalization = "0.1"

# ML - RouteLLM
tokenizers = "0.22"
hf-hub = { version = "0.4", features = ["tokio"] }
safetensors = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
# Use "debuginfo" instead of true to preserve __TAURI_BUNDLE_TYPE symbol for updater
strip = "debuginfo"
