[package]
name = "lr-coding-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI coding agent orchestration for LocalRouter MCP Gateway"

[dependencies]
lr-types = { workspace = true }
lr-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
allocative = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }
sysinfo = "0.32"

command-group = { version = "5.0", features = ["with-tokio"] }
# Pinned to matusfaro/vibe-kanban — fork tracking BloopAI's HEAD plus
# an extension to ExecutorApprovalService::create_tool_approval that
# threads tool_input through to the host. Bumped in lockstep with
# anything in localrouterai that touches approvals.
executors = { git = "https://github.com/matusfaro/vibe-kanban.git", rev = "b56f317591a3a2b19721a80fd65404d02cb5ab99", package = "executors" }
workspace_utils = { git = "https://github.com/matusfaro/vibe-kanban.git", rev = "b56f317591a3a2b19721a80fd65404d02cb5ab99", package = "utils" }

[lints]
workspace = true
